New page to demonstrate dynamically added or removed controls.

--- a/views/examples.erb
+++ b/views/examples.erb
@@ -9,6 +9,7 @@
   <li><a href='/drag_and_drop'>Drag and Drop</a></li>
   <li><a href='/dropdown'>Dropdown</a></li>
   <li><a href='/dynamic_content'>Dynamic Content</a></li>
+  <li><a href='/dynamic_controls'>Dynamic Controls</a></li>
   <li><a href='/dynamic_loading'>Dynamic Loading</a></li>
   <li><a href='/download'>File Download</a></li>
   <li><a href='/upload'>File Upload</a></li>
