--- a/views/dynamic_controls.erb
+++ b/views/dynamic_controls.erb
@@ -1,49 +1,48 @@
-
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
 <script>
- function onClick (){
-      var start = document.getElementById("start");
-      start.disabled = true;
-      clearMessage();
-      $('#start').after("<div id='loading'>Wait for it... <img src='/img/ajax-loader.gif'></div>");
+function onClick (){
+   var start = $('#start');
+   start.attr("disabled",true);
+   clearMessage();
+   start.after("<div id='loading'>Wait for it... <img src='/img/ajax-loader.gif'></div></br>");
       setTimeout(function() {
 	toggleControls();
-      } , 5000 );
+      } , 3000 );
+};
 
-  };
-
- function clearMessage() {
-    var message = document.getElementById("message");
+function clearMessage() {
     if ($('#message').length) {
-       message.remove();
+       $('#message').first().remove();
     }
- };
+};
 
- function toggleControls() {
-    if ( start.innerText == "Remove") {
-         var check = document.getElementById("checkbox");
-         check.remove();
-	 start.innerText = "Add";
-	 $('#start').after("<p id='message'>It's gone!</p>");
-	 start.disabled = false;
-         $('#loading').hide();
-    }else{
-	 start.innerText = "Remove";
-	 $('#start').after("<div id='checkbox'><input type='checkbox' id='checkbox'>A checkbox </div>");
-	 $('#start').after("<p id='message'>It's back!</p>");
-	 start.disabled = false;
-         $('#loading').hide();
+function toggleControls() {
+  var start = $('#start').first();
+  var check = $('#checkbox').first();
+  var load = $('#loading');
+  if ( start.text() == "Remove") {
+       check.remove();
+       start.text("Add");
+       start.after("<p id='message'>It's gone!</p>");
+       start.attr("disabled", false);
+       load.hide();
+  }else{
+       start.text("Remove");
+       start.after("<div id='checkbox'><input type='checkbox' id='checkbox'> A checkbox </div>");
+       start.after("<p id='message'>It's back!</p>");
+       start.attr("disabled", false);
+       load.hide();
     }
  };
 </script>
-
 <div class="example">
    <h4>Dynamic Controls</h4>
    <p>Demonstrates controls that are added or removed after an async call.</p>
 
-   <form>
-       <button type="button" id="start" onclick="onClick()" >Remove</button>
+   <form >
+       <button autocomplete="off" type="button" id="start" onclick="onClick()" >Remove</button>
        <div id="checkbox">
-	  <input type="checkbox" id="checkbox"> A checkbox
+	  <input type="checkbox" id="checkbox" > A checkbox
        </div>
 
    </form>
