--- a/views/dynamic_controls.erb
+++ b/views/dynamic_controls.erb
@@ -1,13 +1,14 @@
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
 <script>
 function onClick (){
-   var start = $('#start');
-   start.attr("disabled",true);
+   disableButton();
    clearMessage();
-   start.after("<div id='loading'>Wait for it... <img src='/img/ajax-loader.gif'></div></br>");
-      setTimeout(function() {
-	toggleControls();
-      } , 3000 );
+   showDelay();
+   pauseThenToggleControls();
+};
+
+function disableButton() {
+   $('#btn').attr("disabled",true);
 };
 
 function clearMessage() {
@@ -16,21 +17,31 @@ function clearMessage() {
     }
 };
 
+function showDelay() {
+   $('#btn').after("<div id='loading'>Wait for it... <img src='/img/ajax-loader.gif'></div></br>");
+};
+
+function pauseThenToggleControls() {
+   setTimeout(function() {
+	toggleControls();
+   } , 3000 );
+};
+
 function toggleControls() {
-  var start = $('#start').first();
+  var btn = $('#btn').first();
   var check = $('#checkbox').first();
   var load = $('#loading');
-  if ( start.text() == "Remove") {
+  if ( btn.text() == "Remove") {
        check.remove();
-       start.text("Add");
-       start.after("<p id='message'>It's gone!</p>");
-       start.attr("disabled", false);
+       btn.text("Add");
+       btn.after("<p id='message'>It's gone!</p>");
+       btn.attr("disabled", false);
        load.hide();
   }else{
-       start.text("Remove");
-       start.after("<div id='checkbox'><input type='checkbox' id='checkbox'> A checkbox </div>");
-       start.after("<p id='message'>It's back!</p>");
-       start.attr("disabled", false);
+       btn.text("Remove");
+       btn.after("<div id='checkbox'><input type='checkbox' id='checkbox'> A checkbox </div>");
+       btn.after("<p id='message'>It's back!</p>");
+       btn.attr("disabled", false);
        load.hide();
     }
  };
@@ -40,7 +51,7 @@ function toggleControls() {
    <p>Demonstrates controls that are added or removed after an async call.</p>
 
    <form >
-       <button autocomplete="off" type="button" id="start" onclick="onClick()" >Remove</button>
+       <button autocomplete="off" type="button" id="btn" onclick="onClick()" >Remove</button>
        <div id="checkbox">
 	  <input type="checkbox" id="checkbox" > A checkbox
        </div>
